--- a/chrome/popup.html
+++ b/chrome/popup.html
@@ -8,7 +8,7 @@
     <title>Vite + React + TS</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div style="height: 300px;width: 500px;" id="root"></div>
     <script type="module" src="/src/popup/main.tsx"></script>
   </body>
 </html>
